--- a/index.html
+++ b/index.html
@@ -28,13 +28,19 @@
         </div>
     </div>
 </nav>
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4">RFC Capital Partners Fund 3</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+<div class="container-fluid hero px-0">
+    <div class="overlay"></div>
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-md-12 my-auto">
+                <h1 class="display-4">RFC Capital Partners Fund 3</h1>
+                <p class="lead">Strategic advisory and capital investment</p>
+            </div>
+        </div>
     </div>
 </div>
 <div class="container border-bottom py-5 my-5" id="about">
+    <h1>About</h1>
     <p>RFC Capital Partners Fund 3, LLC ("RFC") is the most current fund (circa 2020) in the 36-year history of RFC
         Capital Partners.</p>
     <p>RFC provides both advisory (investment banking and corporate strategy) and makes capital investments in a wide
