--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <p>Current Transactions:</p>
     <ul>
         <li>Industrial “Carve Out” (Current)- RFC is working with a public company and a management team to “carve out”
-            a $1.0 billion division from a public company (deal is in process so no details can be disclosed).
+            a $400 million division from a public company (deal is in process so no details can be disclosed).
         </li>
         <li>Medical Equipment Manufacturer (Current)- RFC is leading an investment in a leading medical equipment
             manufacturer
